--- a/8 Lesson/Base.lproj/Main.storyboard
+++ b/8 Lesson/Base.lproj/Main.storyboard
@@ -221,15 +221,6 @@
                                     <segue destination="SyA-vr-yI4" kind="show" id="1za-jr-08X"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUD-fE-cJJ">
-                                <rect key="frame" x="160" y="409" width="73" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="MENU"/>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="puH-ko-eba"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lCx-KZ-NcW"/>
                         <color key="backgroundColor" red="1" green="0.52039977056182241" blue="0.97869327136306727" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -238,7 +229,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SBT-jH-pTO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3787" y="742"/>
+            <point key="canvasLocation" x="3785.4961832061067" y="741.54929577464793"/>
         </scene>
         <!--Fifth View Controller-->
         <scene sceneID="AWX-bW-2sh">
@@ -288,13 +279,13 @@
     </scenes>
     <resources>
         <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.18823529410000001" green="0.69019607839999997" blue="0.78039215689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
